# WordWise

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  WordWise.sln  Word_Banker.vcxproj
src/: QuizGen.cpp  QuizGen.hpp  TODO.md  UI.cpp  UI.hpp  Utils.cpp  Utils.hpp  WordDatabase.cpp  WordDatabase.hpp  WordTypes.hpp  Word_Banker.vcxproj  Word_Banker.vcxproj.filters  common_main.cpp  common_main.hpp  csv_utils.cpp  main.cpp  neural_network.cpp  neural_network.h  quiz_generator.cpp  quiz_generator.h  word_bank.cpp  word_bank.h  word_entry.h
src/data/: built_in.csv
